<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recurrenceOptionsMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_concer"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">
        <TextView
            android:id="@+id/tvDoesNotRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:minWidth="264dp"
            android:padding="16dp"
            android:text="@string/recurrence_no_repeat"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvDaily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/recurrence_every_day"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvWeekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/recurrence_every_week"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvMonthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/recurrence_every_month"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvYearly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/recurrence_every_year"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvWeekday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/recurrence_every_weekday"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/recurrence_custom"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvCustomTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="264dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="#A2A2A2"
            android:textSize="12sp"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
